# eve_esi

./: .env.example  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: codecov.yml
examples/: axum.rs  axum_sso.rs  basic.rs  cached_request.rs  custom_request.rs  error_response.rs  request_headers.rs  sso.rs
src/: alliance.rs  builder.rs  character.rs  client.rs  config.rs  constant.rs  corporation.rs  error.rs  esi.rs  lib.rs  logging.rs  oauth2.rs
src/endpoints/: alliance.rs  alliances.rs  assets.rs  calendar.rs  character.rs  characters.rs  clones.rs  contacts.rs  contracts.rs  corporation.rs  corporation_projects.rs  corporations.rs  dogma.rs  endpoints.rs  faction_warfare.rs  fittings.rs  fleets.rs  incursions.rs  industry.rs  insurance.rs  killmails.rs  location.rs  loyalty.rs  mail.rs  market.rs  meta.rs  mod.rs  planetary_interaction.rs  routes.rs  search.rs  skills.rs  sovereignty.rs  status.rs  universe.rs  user_interface.rs  wallet.rs
src/endpoints/macros/: common.rs  endpoint.rs  logging.rs  mod.rs  new_endpoint.rs  public.rs
src/error/: config.rs  mod.rs  response.rs
src/esi/: authenticated.rs  client.rs  esi.rs  mod.rs  public.rs  request.rs  response.rs  util.rs
src/esi/tests/: mod.rs
src/model/: alliance.rs  asset.rs  calendar.rs  character.rs  clone.rs  clones.rs  contacts.rs  contract.rs  corporation.rs  enums.rs  esi.rs  market.rs  mod.rs  oauth2.rs  standing.rs  universe.rs  util.rs
src/model/enums/: asset.rs  calendar.rs  character.rs  clones.rs  contacts.rs  contract.rs  corporation.rs  market.rs  mod.rs  notification.rs  standing.rs  universe.rs
src/model/oauth2/: jwt_claims.rs  jwt_key.rs  login.rs  mod.rs
src/oauth2/: auth.rs  client.rs  config.rs  error.rs  jwk.rs  login.rs  mod.rs  oauth2.rs  scope.rs  token.rs
src/oauth2/config/: builder.rs  client.rs  config.rs  mod.rs
src/oauth2/jwk/: builder.rs  cache.rs  jwk.rs  mod.rs  refresh.rs  task.rs  tests.rs  util.rs  util_cache.rs  util_refresh.rs
src/oauth2/scope/: builder.rs  character.rs  corporation.rs  market.rs  mod.rs  wallet.rs
src/scope/: alliance.rs  alliances.rs  assets.rs  builder.rs  calendar.rs  character.rs  characters.rs  clones.rs  contracts.rs  corporation.rs  corporations.rs  fittings.rs  fleets.rs  industry.rs  killmails.rs  location.rs  mail.rs  market.rs  markets.rs  mod.rs  planets.rs  search.rs  skills.rs  ui.rs  universe.rs  wallet.rs
src/tests/: mod.rs  util.rs
tests/: constant.rs  tests.rs  util.rs
tests/alliance/: get_alliance.rs  get_alliance_information.rs  mod.rs
tests/character/: character_affiliation.rs  get_character.rs  get_character_affiliation.rs  get_character_public_information.rs  mod.rs
tests/corporation/: get_corporation.rs  get_corporation_information.rs  mod.rs
tests/endpoints/: alliance.rs  assets.rs  calendar.rs  character.rs  clones.rs  contacts.rs  contract.rs  corporation.rs  market.rs  mod.rs  universe.rs  util.rs
tests/endpoints/alliance/: get_alliance_icon.rs  get_alliance_information.rs  list_all_alliances.rs  list_alliance_corporations.rs  mod.rs
tests/endpoints/character/: character_affiliation.rs  (+6 more)
tests/esi/: cache_strategy.rs  get_from_public_esi.rs  mod.rs  post_to_public_esi.rs  response_headers.rs  validate_token_before_request.rs
tests/oauth2/: fetch_jwt_keys.rs  get_jwt_keys.rs  mod.rs
tests/util/: mod.rs  setup.rs
(+47 files in other folders)
