[package]
name = "eve_esi"
version = "0.4.3"
authors = ["Hyziri <hyziri@protonmail.com>"]
edition = "2021"
description = "Thread-safe, asynchronous client for EVE Online's ESI & OAuth2"
keywords = ["eve_online", "esi", "eve",  "eve_esi", "eve_oauth2"]
repository = "https://github.com/hyziri/eve_esi"
documentation = "https://docs.rs/eve_esi/latest/eve_esi/"
license = "MIT"
readme = "README.md"
include = ["/src", "LICENSE", "README.md"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
log = "0.4.27"
oauth2 = "5.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["sync", "macros", "time"] }

[dev-dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
mockito = "1.7.0"
serde_json = "1.0.142"
dotenvy = "0.15.7"
env_logger = "0.11.8"
tower-sessions = "0.14.0"
time = "0.3.43"
openssl = "0.10.73"
base64 = "0.22.1"
paste = "1.0.15"
