[package]
name = "eve_esi"
version = "0.4.8"
edition = "2021"
description = "Thread-safe, asynchronous client for EVE Online's ESI & OAuth2"
documentation = "https://docs.rs/eve_esi/latest/eve_esi/"
readme = "README.md"
repository = "https://github.com/autumn-order/eve_esi"
license = "MIT"
keywords = ["esi", "eve", "eve_esi", "eve_oauth2", "eve_online"]
include = ["/src", "LICENSE", "README.md"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
log = "0.4.27"
oauth2 = "5.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "sync", "time"] }
url = "2.5.7"

[dev-dependencies]
axum = "0.8.4"
base64 = "0.22.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
mockito = "1.7.0"
openssl = "0.10.73"
paste = "1.0.15"
serde_json = "1.0.142"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-sessions = "0.14.0"
