[package]
name = "eve_esi"
version = "0.5.0-rc.1"
edition = "2021"
description = "Thread-safe, asynchronous client for EVE Online's ESI & OAuth2"
documentation = "https://docs.rs/eve_esi/latest/eve_esi/"
readme = "README.md"
repository = "https://github.com/autumn-order/eve_esi"
license = "MIT"
keywords = ["esi", "eve", "eve_esi", "eve_oauth2", "eve_online"]
include = ["/src", "LICENSE", "README.md"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
log = "0.4.29"
oauth2 = "5.0.0"
# use older reqwest version until 0.13 is supported by oauth2 crate
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "sync", "time"] }
url = "2.5.8"

[dev-dependencies]
axum = "0.8.8"
base64 = "0.22.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
mockito = "1.7.2"
openssl = "0.10.75"
paste = "1.0.15"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tower-sessions = "0.15.0"
